<resources>
    <string name="app_name">RacketOMeter</string>
    <string name="activity_performance_title">Performance</string>
    <string name="activity_profile_title">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="performance_api_url">http://racketometer.azurewebsites.net/api/session/get</string>

    <string name="profile_name">Name</string>
    <string name="profile_club">Club</string>
    <string name="profile_save">Save</string>
    <string name="history">History</string>
    <string name="title_activity_maps">Map</string>

    <string name="details_date_field">Date:</string>
    <string name="details_description_field">Description:</string>
    <string name="details_hits_field">Hits:</string>
    <string name="details_performance_field">Performance:</string>

    <string name="facebook_app_id">1551025941860056</string>

    <string name="menu_history">History</string>
    <string name="menu_refresh">Refresh</string>

    <string name="overview_speed">Speed</string>
    <string name="overview_agility">Agility</string>
    <string name="overview_power">Power</string>
    <string name="overview_chart_description">Last 5 performances</string>

    <string name="history_adaptor_performance">Performance:</string>

    <string name="no_data_header">No data in the sky. Upload your performance to get started.</string>

    <string name="no_internet">You are not connected to the internet.</string>

</resources>
