<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OverviewFragment">

    <LinearLayout
        android:id="@+id/lnl_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lbl_speed"
            style="@style/Overview.Label"
            android:text="@string/overview_speed" />

        <TextView
            android:id="@+id/lbl_agility"
            style="@style/Overview.Label"
            android:text="@string/overview_agility" />

        <TextView
            android:id="@+id/lbl_power"
            style="@style/Overview.Label"
            android:text="@string/overview_power" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnl_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnl_labels">

        <TextView
            android:id="@+id/txt_speed"
            style="@style/Overview.Value" />

        <TextView
            android:id="@+id/txt_agility"
            style="@style/Overview.Value" />

        <TextView
            android:id="@+id/txt_power"
            style="@style/Overview.Value" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_chart"
        style="@style/Overview.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnl_values"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/overview_chart_description" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/cht_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txt_chart"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

</RelativeLayout>
