<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smap.f16.grp12.racketometer.fragments.DetailsFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/date_field"
        style="@style/Details.Label"
        android:layout_margin="@dimen/details_text_margin"
        android:text="@string/details_date_field" />

    <TextView
        android:id="@+id/date_input"
        style="@style/Details.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/details_text_margin"
        android:layout_toStartOf="@id/map" />

    <TextView
        android:id="@+id/hits_field"
        style="@style/Details.Label"
        android:layout_below="@id/date_field"
        android:layout_margin="@dimen/details_text_margin"
        android:text="@string/details_hits_field" />

    <TextView
        android:id="@+id/hits_input"
        style="@style/Details.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_input"
        android:layout_margin="@dimen/details_text_margin"
        android:layout_toStartOf="@id/map" />

    <TextView
        android:id="@+id/performance_field"
        style="@style/Details.Label"
        android:layout_below="@id/hits_field"
        android:layout_margin="@dimen/details_text_margin"
        android:text="@string/details_performance_field" />

    <TextView
        android:id="@+id/performance_input"
        style="@style/Details.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hits_input"
        android:layout_margin="@dimen/details_text_margin"
        android:layout_toStartOf="@id/map" />

    <TextView
        android:id="@+id/description_field"
        style="@style/Details.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/map"
        android:layout_marginLeft="@dimen/details_text_margin"
        android:layout_marginRight="@dimen/details_text_margin"
        android:layout_marginTop="@dimen/details_text_margin"
        android:text="@string/details_description_field" />

    <TextView
        android:id="@+id/description_input"
        style="@style/Details.Value"
        android:layout_width="220dp"
        android:layout_height="200dp"
        android:layout_below="@id/description_field"
        android:layout_marginLeft="@dimen/details_text_margin"
        android:layout_marginRight="@dimen/details_text_margin" />

    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:id="@+id/detailsBarChart"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentBottom="true" />

    <com.facebook.share.widget.ShareButton
        android:id="@+id/fb_share_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_above="@id/detailsBarChart"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp" />
</RelativeLayout>
